--- a/index.html
+++ b/index.html
@@ -277,17 +277,17 @@
               />
               <img
                 class="imagearea"
-                src="assets/img/index/detail_3.jpg"
+                src="assets/img/index/detail_3.JPG"
                 alt="Image 2"
               />
               <img
                 class="imagearea"
-                src="assets/img/index/detail_4.jpg"
+                src="assets/img/index/detail_4.JPG"
                 alt="Image 4"
               />
               <img
                 class="imagearea"
-                src="assets/img/index/detail_5.jpg"
+                src="assets/img/index/detail_5.JPG"
                 alt="Image 5"
               />
             </div>
