--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="modal_body">
           <div class="md_nav">
             <ul>
-              <li><a id="a_top">TOP</a></li>
+              <li><a href="#top">TOP</a></li>
               <li><a href="#about">にこにこ食堂</a></li>
               <li><a href="#support">寄付について</a></li>
               <li><a href="#lower">NPO法人imitata</a></li>
