--- a/index.html
+++ b/index.html
@@ -346,18 +346,20 @@
               />
             </h2>
           </div>
-          <h3 class="content_outline set_bdrs">
-            認定NPO法人imitataは一般市民を対象とし、子ども食堂を運営、<br>
-そのノウハウの提供を行うことで子どもの健全な育成を行うこと。<br>
-そして、子ども食堂内で行うレクリエーションのノウハウを提供することで、子どもたちとより文化的な交流を行い、<br>
-食材などの寄付を募り、それを適時、連携している子ども食堂に分配することで、<br>
-フードロスを無くし、尚且つ円滑に子ども食堂の運営が行えるように助成していくことを目的としています。
-          </h3>
-          <h3>
-            にこにこ食堂は、子ども食堂の活動を通じて<br>
-            高齢者や障がい者にもやさしく、未来の子どもたちにも豊かな環境を引き継いでいける、<br>
-            そんなまちづくりのお手伝いができればと思い活動しています。
+          <div class="lower_main_content">
+            <h3 class="content_outline set_bdrs">
+              認定NPO法人imitataは一般市民を対象とし、子ども食堂を運営、<br>
+  そのノウハウの提供を行うことで子どもの健全な育成を行うこと。<br>
+  そして、子ども食堂内で行うレクリエーションのノウハウを提供することで、子どもたちとより文化的な交流を行い、<br>
+  食材などの寄付を募り、それを適時、連携している子ども食堂に分配することで、<br>
+  フードロスを無くし、尚且つ円滑に子ども食堂の運営が行えるように助成していくことを目的としています。
             </h3>
+            <h3>
+              にこにこ食堂は、子ども食堂の活動を通じて<br>
+              高齢者や障がい者にもやさしく、未来の子どもたちにも豊かな環境を引き継いでいける、<br>
+              そんなまちづくりのお手伝いができればと思い活動しています。
+            </h3>
+          </div>
             <div class="figure">
               <h2 class="name js_fadeup">
                 <div>
